usgs-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: usgs
spec:
  hosts:
  - earthquake.usgs.gov
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usgs
spec:
  hosts:
  - earthquake.usgs.gov
  tls:
  - match:
    - port: 443
      sni_hosts:
      - earthquake.usgs.gov
    route:
    - destination:
        host: earthquake.usgs.gov
        port:
          number: 443
      weight: 100
